--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,14 @@ body,
   width: 100%;
   height: 100%;
 }
+
+#save {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%);
+  width: 100px;
+  height: 50px;
+  font-size: 16px;
+  cursor: pointer;
+}
